# THREATGUARD-AI

./: .gitignore  app.py  convert_dataset.py  custom-training-dataset.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  sample-training-dataset.json  vite.config.js
demo_target/: Internal_Audit.docx.crypt  Q3_Financial_Projections.xlsx.crypt  RANSOM_NOTE.txt  threat_guard_dataset_1.xlsx.crypt
server/: index.js  package-lock.json  package.json
src/: App.jsx  heuristics.js  index.css
static/: index.html
static/assets/: index-CZmh5Nho.js  index-DrAjNXox.css
